--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,14 +18,14 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '20.x'
 
       # Step 3: Install dependencies
       - name: Install dependencies
-        run: |
-         cd app
+      run: |
          npm install
 
       # Step 4: Run tests
-      - name: Run tests
-        run: npm test
+     #- name: Run tests
+     #  run: npm test
+     
