--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI pipeline
+name: CI/CD pipeline
 on:
     push:
         branches:
@@ -24,3 +24,21 @@ jobs:
               run: |
                   cd my-node-app
                   npm run build
+
+    deploy:
+        runs-on: ubuntu-latest
+        needs: build
+        steps:
+            - name: Deploy to Server
+              uses: appleboy/ssh-action@v0.1.6
+              with:
+                  host: ${{ secrets.DEPLOY_HOST }}
+                  username: ${{ secrets.DEPLOY_USER }}
+                  key: ${{ secrets.DEPLOY_KEY }}
+                  port: 22
+                  script: |
+                      cd /path/to/your/deployment/directory
+                      git pull origin main
+                      npm install
+                      npm run build
+                      pm2 restart all
